unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/abacus__Ledger_Entry_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls ledger entry and accounting functions.</description>
    <label>Ledger Entry Settings</label>
</CustomObject>