unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Accounting_Data_Record_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Data_Record_Type_Filter__c</fullName>
    <description>Opportunities only generate accounting data if their record type is listed here. If no record types are defined, all Opportunities generate accounting data. Semicolon-delimited, API names only. Case-sensitive.</description>
    <inlineHelpText>Opportunities only generate accounting data if their record type is listed here. If no record types are defined, all Opportunities generate accounting data.</inlineHelpText>
    <label>Accounting Data Record Type Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>