unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Accounting_Job_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Job_Batch_Size__c</fullName>
    <description>The maximum number of records processed in a single batch by the Accounting Scheduled Job. If processing doesn't finish, try lowering this value. If not specified, the default is 200.</description>
    <inlineHelpText>The maximum number of records processed in a single batch by the Accounting Scheduled Job. If not specified, the default is 200.</inlineHelpText>
    <label>Accounting Job Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>