unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Accounting_Records_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>abacus__Accounting_Records_Start_Date__c</fullName>
    <description>Opportunities with a Created Date older than this date don't generate accounting data and are not processed by the Scheduled Accounting Job. If left blank, the system uses the date that Accounting Subledger was first installed.</description>
    <inlineHelpText>Opportunities with a Created Date older than this date don't generate accounting data and are not processed by the Scheduled Accounting Job. If left blank, the system uses the date that Accounting Subledger was first installed.</inlineHelpText>
    <label>Accounting Records Start Date</label>
    <type>DateTime</type>
</CustomField>