unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Adjust_When_Payment_Method_Changes__c.field-meta.xml
<CustomField>
    <fullName>abacus__Adjust_When_Payment_Method_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Payment Method changes generate adjustment Ledger Entries.</description>
    <inlineHelpText>If selected, generate adjustment Ledger Entries for Payment Method changes.</inlineHelpText>
    <label>Adjust When Payment Method Changes</label>
    <type>Checkbox</type>
</CustomField>