unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>abacus__Default_Payment_Method__c</fullName>
    <description>When a Payment is marked as Paid and no Payment Method is chosen, the Payment Method is automatically set to this value. If this setting is blank, the Payment Method is left blank.</description>
    <inlineHelpText>When a Payment is marked as Paid and no Payment Method is chosen, the Payment Method is automatically set to this value. If this setting is blank, the Payment Method is left blank.  This setting applies to NPSP's Payment Object only.</inlineHelpText>
    <label>Default Payment Method (NPSP Payment)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>