unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Default_Pledge_Code__c.field-meta.xml
<CustomField>
    <fullName>abacus__Default_Pledge_Code__c</fullName>
    <description>Represents the name of your default accrual account.</description>
    <inlineHelpText>Represents the name of your default accrual account.</inlineHelpText>
    <label>Default Accrued Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>