unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Default_Write_Off_Code__c.field-meta.xml
<CustomField>
    <fullName>abacus__Default_Write_Off_Code__c</fullName>
    <description>Represents the name of your account for for written off payments.</description>
    <inlineHelpText>Represents the name of your account for for written off payments.</inlineHelpText>
    <label>Default Write-Off Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>