unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Disable_NPSP_Stage_To_State_Mapping__c.field-meta.xml
<CustomField>
    <fullName>abacus__Disable_NPSP_Stage_To_State_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NPSP Feature to control whether Automatic Pledge Activation is Enabled.</description>
    <inlineHelpText>If checked, Pledges will not be generated unless the Ledger Entry Creation Active Indicator on the Opportunity is checked manually.</inlineHelpText>
    <label>Disable NPSP Stage To State Mapping</label>
    <type>Checkbox</type>
</CustomField>