unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Enable_Accounting_Periods__c.field-meta.xml
<CustomField>
    <fullName>abacus__Enable_Accounting_Periods__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Accounting Period object and all related functionality. Requires an Accounting Subledger Growth Edition license.</description>
    <inlineHelpText>Enables the Accounting Period object and all related functionality. Requires an Accounting Subledger Growth Edition license.</inlineHelpText>
    <label>Enable Accounting Periods</label>
    <type>Checkbox</type>
</CustomField>