unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Enable_Batch_Incremental_Mode__c.field-meta.xml
<CustomField>
    <fullName>abacus__Enable_Batch_Incremental_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, Accounting Subledger will use Accounting Review records to determine changes rather than querying all records. Accounting Reviews will be generated automatically as your data changes, and deleted after they are successfully processed.</description>
    <inlineHelpText>If enabled, Accounting Subledger will use Accounting Review records to determine changes rather than querying all records. Accounting Reviews will be generated automatically as your data changes, and deleted after they are successfully processed.</inlineHelpText>
    <label>Enable Accounting Review Mode</label>
    <type>Checkbox</type>
</CustomField>