unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Enable_Growth_Features__c.field-meta.xml
<CustomField>
    <fullName>abacus__Enable_Growth_Features__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Accounting Subledger Growth features in non-production orgs. In production orgs, this setting has no effect.</description>
    <inlineHelpText>Enables Accounting Subledger Growth features in non-production orgs. In production orgs, this setting has no effect.</inlineHelpText>
    <label>Enable Subledger Growth for Testing</label>
    <type>Checkbox</type>
</CustomField>