unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Enable_Ledger_Entry_Creation__c.field-meta.xml
<CustomField>
    <fullName>abacus__Enable_Ledger_Entry_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that ledger entry creation is enabled for the organization.</description>
    <inlineHelpText>Indicates that ledger entry creation is enabled for the organization.</inlineHelpText>
    <label>Enable Ledger Entry Creation</label>
    <type>Checkbox</type>
</CustomField>