unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Enable_Multiple_Accounting_Set_Support__c.field-meta.xml
<CustomField>
    <fullName>abacus__Enable_Multiple_Accounting_Set_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Multiple Active Accounting Sets</description>
    <inlineHelpText>Enables Support for Multiple Active Accounting Sets.  Once enabled, certain settings that were global must now be configured on each active Accounting Set.</inlineHelpText>
    <label>Enable Multiple Accounting Set Support</label>
    <type>Checkbox</type>
</CustomField>