unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Group_All_Debits_And_Credits_By_GAU__c.field-meta.xml
<CustomField>
    <fullName>abacus__Group_All_Debits_And_Credits_By_GAU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether all Ledger Entries are grouped by GAU. Requires an Accounting Subledger Growth Edition license.</description>
    <inlineHelpText>All Debit and Credit Ledger Entries will be associated with a Fund Account. Secondary Payment Ledger Entries will also be created, balancing each Payment Ledger Entry. Requires an Accounting Subledger Growth Edition license.</inlineHelpText>
    <label>Group All Debits/Credits By Fund Account</label>
    <type>Checkbox</type>
</CustomField>