unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Group_Revenue_By_Due_Date_And_Allocation__c.field-meta.xml
<CustomField>
    <fullName>abacus__Group_Revenue_By_Due_Date_And_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines how allocation Ledger Entries are generated by setting the value of Revenue Grouping Scheme on each Opportunity. If unchecked, an allocation Ledger Entry is created for each GAU Allocation. If checked, an allocation Ledger Entry is created for each Payment Allocation.</description>
    <inlineHelpText>If unchecked, an allocation Ledger Entry is created for each GAU Allocation. If checked, an allocation Ledger Entry is created for each Payment Allocation.</inlineHelpText>
    <label>Group Revenue By Due Date And Allocation</label>
    <type>Checkbox</type>
</CustomField>