unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Number_of_Errors_Allowed_For_Batch__c.field-meta.xml
<CustomField>
    <fullName>abacus__Number_of_Errors_Allowed_For_Batch__c</fullName>
    <description>Once this limit is reached, Accounting Subledger will cancel the batch and display an error for the user to resolve. Common errors could be missing a required field or validation rule.</description>
    <inlineHelpText>Enter the maximum number of errors a batch can generate before it automatically cancels. Typically, one error is generated per payment record if a batch process fails.</inlineHelpText>
    <label>Number of Errors Allowed For Batch</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>