unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Process_Accounting_Data_in_Batch_Only__c.field-meta.xml
<CustomField>
    <fullName>abacus__Process_Accounting_Data_in_Batch_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, accounting data is generated immediately when users add or update gift information, which can alter how your accounting data gets generated.</description>
    <inlineHelpText>If unchecked, accounting data is generated immediately when users add or update gift information, which can alter how your accounting data gets generated.</inlineHelpText>
    <label>Disable Accounting Triggers</label>
    <type>Checkbox</type>
</CustomField>