unpackaged/main/default/objects/abacus__Ledger_Entry_Settings__c/fields/abacus__Run_Accounting_Job_on_a_Schedule__c.field-meta.xml
<CustomField>
    <fullName>abacus__Run_Accounting_Job_on_a_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the Accounting Scheduled Job to run at the assigned time. If unchecked, the scheduled job will not run.</description>
    <inlineHelpText>Enables the Accounting Scheduled Job to run at the assigned time. If unchecked, the scheduled job will not run.</inlineHelpText>
    <label>Run Accounting Job on a Schedule</label>
    <type>Checkbox</type>
</CustomField>